`java-runtime.min-version = 11`